# impossible-fx-sdk

./: .gitignore  README.md
go/: client.go  errors.go  go.mod  types.go
go/examples/batch/: main.go
go/examples/render/: main.go
java/: build.gradle  settings.gradle
java/examples/: BatchExample.java  RenderExample.java
java/src/main/java/io/impossible/fx/: BatchInfo.java  BatchResult.java  BatchStatus.java  BatchTask.java  ImpossibleFX.java  ImpossibleFXException.java  Progress.java  RenderOptions.java  RenderResult.java  TokenOptions.java  TokenResult.java
python/: pyproject.toml
python/examples/: batch.py  render.py
python/impossible_fx/: __init__.py  client.py  types.py
rust/: Cargo.toml
rust/examples/: batch.rs  render.rs
rust/src/: client.rs  error.rs  lib.rs  types.rs
typescript/: package-lock.json  package.json  tsconfig.json
typescript/examples/: batch.ts  render.ts
typescript/src/: client.ts  index.ts  types.ts
