[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "impossible-fx-sdk"
version = "3.0.1"
description = "Python SDK for Impossible FX render API"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "httpx>=0.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["impossible_fx"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-httpx>=0.21",
]
