[package]
name = "impossible-fx-sdk"
version = "3.0.0"
edition = "2021"
description = "Rust SDK for the Impossible FX v3 render API"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "macros"] }
